--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "google-map-react": "^2.1.9",
+    "mapbox-gl": "^2.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mapbox-gl": "^4.8.6",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "thunk": "0.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
