--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "similar-substring": "^1.0.4",
     "thunk": "0.0.1",
     "web-vitals": "^0.2.4"
   },
