--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "d3": "^6.5.0",
     "dotenv": "^8.2.0",
+    "geojson-polygon-center": "0.0.0",
     "google-map-react": "^2.1.9",
     "mapbox-gl": "^2.0.1",
     "react": "^17.0.1",
